--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 *.html linguist-detectable=false
+*.cs linguist-detectable=true
+*.csharp linguist-detectable=true
+*.css linguist-detectable=true
+
